[gd_scene load_steps=4 format=3 uid="uid://3u6rnm13osy3"]

[ext_resource type="Script" uid="uid://b0g76c5cgfcwr" path="res://script/spectral_dagger.gd" id="1_sr8gh"]
[ext_resource type="Texture2D" uid="uid://cereswnf8gxno" path="res://texture/spectral_dagger.png" id="2_du2uu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sr8gh"]
radius = 6.0
height = 48.0

[node name="SpectralDagger" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource("1_sr8gh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_du2uu")

[node name="HoverTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="LifeTimeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 2)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_sr8gh")
